Fixing spacing for estimates

--- a/app/styles/orders/estimate/view.less
+++ b/app/styles/orders/estimate/view.less
@@ -221,6 +221,7 @@
 			md-card{
 				margin:0;
 				max-height:3.5em;
+				min-height:3em;
 				.transition(margin, 150ms);
 				.transition(max-height, 750ms);
 				.transition(all, 250ms);
@@ -311,6 +312,7 @@
 					position:relative;
 					padding:0;
 					max-height:3.5em;
+					min-height:3em;
 					.transition(padding, 150ms);
 					.transition(max-height, 750ms);
 					background-color:rgba(255, 255, 255, 1);
